--- a/deep-learning-fundamentals/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/tensorflow_basics.ipynb
@@ -26,7 +26,7 @@
     "    * For example, in above graph, A, B and D are variables/placeholders while C and E are computational logits that perform computation on A, B and C, D respectively.\n",
     "* Note that: when we are constructing the graph, values are not known and they are represented by either `variables` or `placeholders`\n",
     "* When we start running the computation on the constructed graph, we will feed values into the graph through the variables and placeholders.\n",
-    "    * `Variables` store values that can be updated during computation and are initialized just before the computation. Typically, weights and biases are represented by variables.\n",
+    "    * `Variables` store values that can be updated during computation and are initialized just before (each run of) graph computation. Typically, weights and biases are represented by variables.\n",
     "    * `Placeholders` store values that can not be updated during the computation and are provided by user (of the graph). Typically, training, testing samples and some hyperparameters are represented by placeholders.\n",
     "\n",
     "**Why Graph**\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,27 +48,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point TensorFlow has already started managing a lot of state for us. There's already an implicit default graph, for example. Internally, the default graph lives in the `_default_graph_stack`, but we don't have access to that directly. We use [`tf.get_default_graph()`](https://www.tensorflow.org/api_docs/python/tf/get_default_graph)."
+    "> At this point TensorFlow has already started managing a lot of state for us. There's already an implicit default graph, for example. Internally, the default graph lives in the `_default_graph_stack`, but we don't have access to that directly. We use [`tf.get_default_graph()`](https://www.tensorflow.org/api_docs/python/tf/get_default_graph)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tensorflow.python.framework.ops.Graph object at 0x110273a90>\n",
-      "[]\n"
+      "default graph:  <tensorflow.python.framework.ops.Graph object at 0x10fadfc50>\n",
+      "all operations:  []\n"
      ]
     }
    ],
    "source": [
     "graph = tf.get_default_graph()\n",
-    "print(graph)\n",
-    "print(graph.get_operations())"
+    "print(\"default graph: \", graph)\n",
+    "print(\"all operations: \", graph.get_operations())"
    ]
   },
   {
@@ -82,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<tf.Operation 'Const' type=Const>, <tf.Operation 'Const_1' type=Const>, <tf.Operation 'Const_2' type=Const>]\n",
-      "name: \"Const\"\n",
+      "all operations:  [<tf.Operation 'Const' type=Const>]\n",
+      "first operations:  name: \"Const\"\n",
       "op: \"Const\"\n",
       "attr {\n",
       "  key: \"dtype\"\n",
@@ -116,8 +116,8 @@
    "source": [
     "input_value = tf.constant(1.0)\n",
     "operations = graph.get_operations()\n",
-    "print(operations)\n",
-    "print(operations[0].node_def)"
+    "print(\"all operations: \", operations)\n",
+    "print(\"first operations: \", operations[0].node_def)"
    ]
   },
   {
@@ -179,7 +179,9 @@
     "\n",
     "* A \"TensorFlow Session\" is an environment for running a graph. The session is in charge of allocating the operations to GPU(s) and/or CPU(s), including remote machines. \n",
     "* Why we need session?\n",
-    "    * Session is kind of separating running a constructed tensorflow graph from the construction of that tensorflow graph. It will allocate necessary computational resources (be it a CPU, a GPU or multiple GPUs) via configuration when we actually running the graph"
+    "    * Session is kind of separating running a constructed tensorflow graph from the construction of that tensorflow graph. It will allocate necessary computational resources (be it a CPU, a GPU or multiple GPUs) via configuration when we actually running the graph\n",
+    "* The following code creates a session instance `sess` using [`tf.Session`](https://www.tensorflow.org/api_docs/python/tf/Session). \n",
+    "    * The `sess.run()` function then evaluates the tensor and returns the results."
    ]
   },
   {
@@ -200,13 +202,6 @@
     "with tf.Session() as sess:\n",
     "    output = sess.run(input_value)\n",
     "    print(output)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* The code creates a session instance, `sess`, using [`tf.Session`](https://www.tensorflow.org/api_docs/python/tf/Session). The `sess.run()` function then evaluates the tensor and returns the results."
    ]
   },
   {
