--- a/other_resources/numpy_fundamental.ipynb
+++ b/other_resources/numpy_fundamental.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1150,6 +1150,41 @@
     "v[:] = v - 1\n",
     "print(v)\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1]\n",
+      "[[1]]\n",
+      "(1, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [1]\n",
+    "myarray = np.asarray(data)\n",
+    "\n",
+    "print(data)\n",
+    "print(myarray)\n",
+    "\n",
+    "newarr = myarray.reshape(1, -1)\n",
+    "print(newarr)\n",
+    "print(newarr.shape)"
    ]
   },
   {
