--- a/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
@@ -413,6 +413,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 6. Batching\n",
+    "\n",
+    "This is a simple function for returning batches from data. \n",
+    "* First it removes data such that we only have full batches. \n",
+    "* Then it iterates through the `x` and `y` arrays and returns slices out of those arrays with size `[batch_size]`.\n",
+    "\n",
+    "```python\n",
+    "def get_batches(x, y, batch_size=100):\n",
+    "    \n",
+    "    n_batches = len(x)//batch_size\n",
+    "    \n",
+    "    # Only get full batches\n",
+    "    x, y = x[:n_batches*batch_size], y[:n_batches*batch_size]\n",
+    "    \n",
+    "    # returns slices with size [batch_size]\n",
+    "    for ii in range(0, len(x), batch_size):\n",
+    "        yield x[ii:ii+batch_size], y[ii:ii+batch_size]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "\n",
+    "\n",
+    "** Below is the typical training pseudo code: **\n",
+    "\n",
+    "```\n",
+    "create a session for the specified graph\n",
+    "{\n",
+    "    initialize all global variables\n",
+    "\n",
+    "    iterate epochs\n",
+    "    {\n",
+    "            iterate batches\n",
+    "            {\n",
+    "                create graph input map for current run\n",
+    "\n",
+    "                evalute the graph for current run with input map, and \n",
+    "                return results for specified tensors or operations\n",
+    "\n",
+    "                (for certain # of iterations) print training process information, such as loss and accuracy\n",
+    "\n",
+    "                (for certain # of iterations) validate the graph while training\n",
+    "            }\n",
+    "    } \n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** python code: **\n",
+    "\n",
+    "```python\n",
+    "epochs = 10\n",
+    "\n",
+    "with graph.as_default():\n",
+    "    saver = tf.train.Saver()\n",
+    "\n",
+    "# create a session for the specified graph\n",
+    "with tf.Session(graph=graph) as sess:\n",
+    "    \n",
+    "    # initialize all global variables\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    iteration = 1\n",
+    "    \n",
+    "    # iterate epochs\n",
+    "    for e in range(epochs):\n",
+    "        \n",
+    "        # evaluates the initial_state tensor and returns the results.\n",
+    "        state = sess.run(initial_state)\n",
+    "        \n",
+    "        # iterate batches\n",
+    "        for ii, (x, y) in enumerate(get_batches(train_x, train_y, batch_size), 1):\n",
+    "            \n",
+    "            # create graph input map\n",
+    "            feed = {inputs_: x,\n",
+    "                    labels_: y[:, None],   # change ths shape of y to [batch_size, 1]\n",
+    "                    keep_prob: 0.5,\n",
+    "                    initial_state: state}\n",
+    "            \n",
+    "            # evalute the graph for one run with input map, and\n",
+    "            # return results for specified tensors or operations\n",
+    "            loss, state, _ = sess.run([cost, final_state, optimizer], feed_dict=feed)\n",
+    "            \n",
+    "            # print training process information\n",
+    "            if iteration%5==0:\n",
+    "                print(\"Epoch: {}/{}\".format(e, epochs),\n",
+    "                      \"Iteration: {}\".format(iteration),\n",
+    "                      \"Train loss: {:.3f}\".format(loss))\n",
+    "\n",
+    "            # print validation information while training\n",
+    "            if iteration%25==0:\n",
+    "                val_acc = []\n",
+    "                val_state = sess.run(cell.zero_state(batch_size, tf.float32))\n",
+    "                for x, y in get_batches(val_x, val_y, batch_size):\n",
+    "                    feed = {inputs_: x,\n",
+    "                            labels_: y[:, None],\n",
+    "                            keep_prob: 1,\n",
+    "                            initial_state: val_state}\n",
+    "                    batch_acc, val_state = sess.run([accuracy, final_state], feed_dict=feed)\n",
+    "                    val_acc.append(batch_acc)\n",
+    "                print(\"Val acc: {:.3f}\".format(np.mean(val_acc)))\n",
+    "            iteration +=1\n",
+    "                        \n",
+    "    saver.save(sess, \"checkpoints/sentiment.ckpt\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "about the initial_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing\n",
+    "\n",
+    "The logic of testing process is quite similar to training except that \n",
+    "* No need to run epochs and validate the graph\n",
+    "* Get evaluating results of different tensors or operations for each graph run \n",
+    "\n",
+    "\n",
+    "** python code: **\n",
+    "\n",
+    "```python\n",
+    "test_acc = []\n",
+    "with tf.Session(graph=graph) as sess:\n",
+    "    \n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('checkpoints'))\n",
+    "    \n",
+    "    # any difference with state = sess.run(initial_state) ???\n",
+    "    test_state = sess.run(cell.zero_state(batch_size, tf.float32))\n",
+    "    \n",
+    "    for ii, (x, y) in enumerate(get_batches(test_x, test_y, batch_size), 1):\n",
+    "        \n",
+    "        feed = {inputs_: x,\n",
+    "                labels_: y[:, None],\n",
+    "                keep_prob: 1,\n",
+    "                initial_state: test_state}\n",
+    "        \n",
+    "        batch_acc, test_state = sess.run([accuracy, final_state], feed_dict=feed)\n",
+    "        \n",
+    "        test_acc.append(batch_acc)\n",
+    "        \n",
+    "    print(\"Test accuracy: {:.3f}\".format(np.mean(test_acc)))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here is [a tutorial on building RNNs](https://www.tensorflow.org/tutorials/recurrent) that will help you out."
    ]
   },
