--- a/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
@@ -18,7 +18,9 @@
     "* `lstm_units`: Number of units in the hidden layers in the LSTM cells. Usually larger is better performance wise. Common values are 128, 256, 512, etc.\n",
     "* `lstm_layers`: Number of LSTM layers in the network. I'd start with 1, then add more if I'm underfitting.\n",
     "* `learning_rate`: Learning rate\n",
-    "* `keep_prob`: The dropout keep probability when training. If you're network is overfitting, try decreasing this."
+    "* `keep_prob`: The dropout keep probability when training. If you're network is overfitting, try decreasing this.\n",
+    "\n",
+    "**Note: ** the above hyperparameters can be applied to any kind of RNN, not just LSTM. "
    ]
   },
   {
