--- a/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
@@ -14,7 +14,7 @@
     "## 0. Important hyperparameters for RNN\n",
     "\n",
     "* `batch_size`: The number of training examples to feed the network in one training pass. Typically this should be set as high as you can go without running out of memory.\n",
-    "* `num_steps`: (or time steps) Number of characters (or words) in sequences of a batch the network is trained on. Larger is better typically; the network will learn more long range dependencies. But it takes longer to train. \n",
+    "* `num_steps`: (or time steps) Number of characters (or words) in a sequence of (different batch may have different num_steps). Larger is better typically; the network will learn more long range dependencies. But it takes longer to train. \n",
     "* `lstm_units`: Number of units in the hidden layers in the LSTM cells. Usually larger is better performance wise. Common values are 128, 256, 512, etc.\n",
     "* `lstm_layers`: Number of LSTM layers in the network. I'd start with 1, then add more if I'm underfitting.\n",
     "* `learning_rate`: Learning rate\n",
@@ -140,7 +140,7 @@
     "\n",
     "The final `MultiRNNCell` you're using in the network is actually multiple (or just one) cells with typically dropout. But it all works the same from an achitectural viewpoint, just a more complicated graph in the cell.\n",
     "\n",
-    "> NOTE: each RNN cell represents a layer. It is just that when we unroll a RNN cell in terms of time steps, it is like we have multiple RNN cells per layer. \n"
+    "> NOTE: each RNN cell here represents a layer. It is just that when we unroll a RNN cell in terms of time steps, it is like we have multiple RNN cells per layer. \n"
    ]
   },
   {
@@ -191,6 +191,18 @@
     "* The inputs to cell <b style='color:red'>at each time step</b> will have shape of `[batch_size, embed_dim]`\n",
     "* The outputs from `tf.nn.dynamic_rnn` have shape of `[batch_size, max_time, cell.output_size]`\n",
     "    * the cell.output_size typically is the `lstm_units` of the cell in the last layer of LSTM network if the network has multiple LSTM layers. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** cell.zero_state(...) **\n",
+    "* All RNN cells have this `zero_state` method\n",
+    "* It takes `batch_size` and `dtype` as input\n",
+    "* It returns zero-filled state tensor(s).\n",
+    "    * If state_size is an int or TensorShape, then the return value is a N-D tensor of shape `[batch_size, state_size]` filled with zeros.\n",
+    "    * If state_size is a nested list or tuple, then the return value is a nested list or tuple (of the same structure) of 2-D tensors with the shapes `[batch_size, s]` for each s in state_size."
    ]
   },
   {
