Add experiment for tf.train.batch

--- a/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
@@ -594,75 +594,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tensor(\"y:0\", shape=(?,), dtype=int32)\n",
-      "Tensor(\"y_batch:0\", shape=(5, ?), dtype=int32)\n",
-      "WARNING:tensorflow:From <ipython-input-2-030ce1122356>:37: run_n (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
-      "Instructions for updating:\n",
-      "graph_actions.py will be deleted. Use tf.train.* utilities instead. You can use learn/estimators/estimator.py as an example.\n",
-      "WARNING:tensorflow:From /Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/tensorflow/contrib/learn/python/learn/graph_actions.py:644: run_feeds (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
-      "Instructions for updating:\n",
-      "graph_actions.py will be deleted. Use tf.train.* utilities instead. You can use learn/estimators/estimator.py as an example.\n",
-      "WARNING:tensorflow:From /Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/tensorflow/contrib/learn/python/learn/graph_actions.py:702: run_feeds_iter (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
-      "Instructions for updating:\n",
-      "graph_actions.py will be deleted. Use tf.train.* utilities instead. You can use learn/estimators/estimator.py as an example.\n",
-      "Batch shape: (5, 4)\n",
-      "[[0 0 0 0]\n",
-      " [1 0 0 0]\n",
-      " [1 2 0 0]\n",
-      " [1 2 3 0]\n",
-      " [1 2 3 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
+    "import numpy as np\n",
     "\n",
     "tf.reset_default_graph()\n",
     "\n",
-    "# Create a tensor [0, 1, 2, 3, 4 ,...]\n",
-    "x = tf.range(1, 10, name=\"x\")\n",
+    "# # Create a tensor [0, 1, 2, 3, 4 ,...]\n",
+    "# x = tf.range(1, 10, name=\"x\")\n",
     "\n",
+    "# # A queue that outputs 0,1,2,3,...\n",
+    "# range_q = tf.train.range_input_producer(limit=5, shuffle=False)\n",
+    "# slice_end = range_q.dequeue()\n",
+    "\n",
+    "# # Slice x to variable length, i.e. [0], [0, 1], [0, 1, 2], ....\n",
+    "# # y = tf.slice(x, [0], [slice_end], name=\"y\")\n",
+    "\n",
+    "# # print(y)\n",
+    "# value = np.array([[1], [0, 1], [0, 1, 2],[0, 1, 2],[0, 1, 2],[0, 1, 2],[0, 1, 2],[0, 1, 2],[0, 1, 2]])\n",
+    "# print(value)\n",
+    "\n",
+    "# y = tf.placeholder(tf.int32, shape=[None, None], name='y')\n",
+    "# batch_size = 3\n",
+    "\n",
+    "# [0, 1, 2, 3, 4 ,...]\n",
+    "x = tf.range(1, 10, name=\"x\")\n",
+    "batch_size = 3\n",
     "# A queue that outputs 0,1,2,3,...\n",
     "range_q = tf.train.range_input_producer(limit=5, shuffle=False)\n",
     "slice_end = range_q.dequeue()\n",
-    "\n",
+    " \n",
     "# Slice x to variable length, i.e. [0], [0, 1], [0, 1, 2], ....\n",
     "y = tf.slice(x, [0], [slice_end], name=\"y\")\n",
     "\n",
-    "print(y)\n",
-    "\n",
     "# Batch the variable length tensor with dynamic padding\n",
-    "batched_data = tf.train.batch(\n",
-    "    tensors=[y],\n",
-    "    batch_size=5,\n",
-    "    dynamic_pad=True,\n",
-    "    name=\"y_batch\"\n",
-    ")\n",
+    "# batched_data = tf.train.batch(\n",
+    "#     tensors=[y],\n",
+    "#     batch_size=batch_size,\n",
+    "#     dynamic_pad=True,\n",
+    "#     name=\"y_batch\"\n",
+    "# )\n",
     "\n",
-    "print(batched_data)\n",
-    "\n",
-    "# with tf.Session() as sess:\n",
-    "#     sess.run(tf.global_variables_initializer())\n",
-    "#     y_, batched_data_ = sess.run([y, batched_data],\n",
-    "#                                       feed_dict=None)\n",
+    "# min_after_dequeue = 10000\n",
+    "# capacity = min_after_dequeue + 3 * batch_size\n",
+    "# batched_data = tf.train.shuffle_batch(\n",
+    "#       [y], batch_size=batch_size, capacity=capacity,\n",
+    "#       min_after_dequeue=min_after_dequeue)\n",
     "    \n",
-    "#     print(y_)\n",
-    "#     print(batched_data_)\n",
+    "# print(batched_data)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    batched_data_ = sess.run(y, feed_dict=None)\n",
+    "    \n",
+    "    print(\"here: \", batched_data_)\n",
     "    \n",
     "# Run the graph\n",
     "# tf.contrib.learn takes care of starting the queues for us\n",
-    "res = tf.contrib.learn.run_n({\"y\": batched_data}, n=1, feed_dict=None)\n",
+    "# res = tf.contrib.learn.run_n({\"y\": batched_data}, n=1, feed_dict=None)\n",
     "\n",
     "# Print the result\n",
-    "print(\"Batch shape: {}\".format(res[0][\"y\"].shape))\n",
-    "print(res[0][\"y\"])\n"
+    "# print(\"Batch shape: {}\".format(res[0][\"y\"].shape))\n",
+    "# print(res[0][\"y\"])\n"
    ]
   },
   {
