--- a/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
@@ -157,10 +157,12 @@
     "outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, initial_state=initial_state)\n",
     "```\n",
     "\n",
+    "### Arguments for tf.nn.dynamic_rnn(...) \n",
+    "\n",
     "the `initial_state` is the initial values of the cell state that is passed between the hidden layers in successive time steps. `tf.nn.dynamic_rnn` takes care of most of the work for us. We pass in our cell and the input to the cell. Then it does the unrolling and everything else for us.\n",
     "\n",
     "* `cell`: An instance of RNNCell.\n",
-    "* `inputs`: The RNN inputs. \n",
+    "* `inputs`: The RNN inputs. The `inputs` typicall is the word embedding from the embedding layer.\n",
     "    * If time_major == False (default), this must be a Tensor of shape: [batch_size, max_time, ...], or a nested tuple of such elements. \n",
     "    * If time_major == True, this must be a Tensor of shape:[max_time, batch_size, ...], or a nested tuple of such elements. \n",
     "        * <b>The first two dimensions must match across all the inputs</b>, but otherwise the ranks and other shape components may differ. In this case, \n",
@@ -168,11 +170,19 @@
     "\n",
     "* `initial_state`: (optional) An initial state for the RNN. If cell.state_size is an integer, this must be a Tensorof appropriate type and shape [batch_size, cell.state_size]. If cell.state_size is a tuple, this should be a tuple of tensors having shapes [batch_size, s] for s in cell.state_size.\n",
     "\n",
-    "Create tensor for initial states with all zeros:\n",
+    "Normally tensor for initial states are initialized with all zeros:\n",
     "\n",
     "```python\n",
     "initial_state = cell.zero_state(batch_size, tf.float32)\n",
     "```\n",
+    "* <b>cell.zero_state(...)</b>\n",
+    "    * All RNN cells have this `zero_state` method\n",
+    "    * It takes `batch_size` and `dtype` as input\n",
+    "    * It returns zero-filled state tensor(s).\n",
+    "        * If state_size is an int or TensorShape, then the return value is a N-D tensor of shape `[batch_size, state_size]` filled with zeros.\n",
+    "        * If state_size is a nested list or tuple, then the return value is a nested list or tuple (of the same structure) of 2-D tensors with the shapes `[batch_size, s]` for each s in state_size.\n",
+    "\n",
+    "### Outputs from tf.nn.dynamic_rnn(...) \n",
     "\n",
     "`tf.nn.dynamic_rnn` returns `outputs` for each time step and the <b style='color:red'>final</b> `state` of the hidden layer.\n",
     "\n",
@@ -186,152 +196,12 @@
     "\n",
     "* `state`: The final state. If cell.state_size is an int, this will be shaped [batch_size, cell.state_size]. If it is a TensorShape, this will be shaped [batch_size] + cell.state_size. If it is a (possibly nested) tuple of ints or TensorShape, this will be a tuple having the corresponding shapes. If cells are LSTMCells state will be a tuple containing a LSTMStateTuple for each cell.\n",
     "\n",
-    "**Typeical scenario for inputs and outputs**\n",
+    "**inputs and outputs for one layer RNN **\n",
     "* The inputs to the `tf.nn.dynamic_rnn` is of shape `[batch_size, max_time, embed_dim]`\n",
     "* The inputs to cell <b style='color:red'>at each time step</b> will have shape of `[batch_size, embed_dim]`\n",
     "* The outputs from `tf.nn.dynamic_rnn` have shape of `[batch_size, max_time, cell.output_size]`\n",
-    "    * the cell.output_size typically is the `lstm_units` of the cell in the last layer of LSTM network if the network has multiple LSTM layers. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "** cell.zero_state(...) **\n",
-    "* All RNN cells have this `zero_state` method\n",
-    "* It takes `batch_size` and `dtype` as input\n",
-    "* It returns zero-filled state tensor(s).\n",
-    "    * If state_size is an int or TensorShape, then the return value is a N-D tensor of shape `[batch_size, state_size]` filled with zeros.\n",
-    "    * If state_size is a nested list or tuple, then the return value is a nested list or tuple (of the same structure) of 2-D tensors with the shapes `[batch_size, s]` for each s in state_size."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**More investigation on tf.nn.dynamic_rnn** from [here](https://stats.stackexchange.com/questions/330176/what-is-the-output-of-a-tf-nn-dynamic-rnn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X batch shape: (4, 2, 3)\n",
-      "outputs with shape:  (4, 2, 5)\n",
-      "[[[ 0.93291515  0.50239432 -0.43230817  0.75407064 -0.0769805 ]\n",
-      "  [ 0.99999219  0.99999034 -0.99999845 -0.99962378 -0.9878065 ]]\n",
-      "\n",
-      " [[ 0.99956155  0.99439365 -0.99177754  0.11601707 -0.69421184]\n",
-      "  [ 0.          0.          0.          0.          0.        ]]\n",
-      "\n",
-      " [[ 0.99999726  0.99995226 -0.99991405 -0.63469619 -0.92676276]\n",
-      "  [ 0.99834806  0.99900055 -0.99992067 -0.98323303 -0.97121006]]\n",
-      "\n",
-      " [[-0.95585638  0.99917287 -0.99539107 -0.99984741 -0.99911404]\n",
-      "  [ 0.94049209  0.87342799 -0.97667748 -0.67169487 -0.92319804]]]\n",
-      "----------------------\n",
-      "states with shape:  (4, 5)\n",
-      "[[ 0.99999219  0.99999034 -0.99999845 -0.99962378 -0.9878065 ]\n",
-      " [ 0.99956155  0.99439365 -0.99177754  0.11601707 -0.69421184]\n",
-      " [ 0.99834806  0.99900055 -0.99992067 -0.98323303 -0.97121006]\n",
-      " [ 0.94049209  0.87342799 -0.97667748 -0.67169487 -0.92319804]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "\n",
-    "tf.reset_default_graph()\n",
-    "    \n",
-    "input_dim = 3\n",
-    "num_steps = 2\n",
-    "num_units = 5\n",
-    "\n",
-    "# None represents the batch size. \n",
-    "# We put None here, since the batch size can be different for each batch.\n",
-    "X = tf.placeholder(tf.float32, [None, num_steps, input_dim], 'inputs')\n",
-    "seq_length = tf.placeholder(tf.int32, [None], 'seq_length')\n",
-    "\n",
-    "# basic_cell = tf.contrib.rnn.BasicLSTMCell(num_units)\n",
-    "basic_cell = tf.contrib.rnn.BasicRNNCell(num_units)\n",
-    "\n",
-    "initial_state = basic_cell.zero_state(4, tf.float32)\n",
-    "\n",
-    "outputs, final_states = tf.nn.dynamic_rnn(basic_cell, X, sequence_length=seq_length, \n",
-    "                                          initial_state=initial_state, dtype=tf.float32)\n",
-    "\n",
-    "# Create a batch of training examples\n",
-    "# shape (4, 2, 3)\n",
-    "X_batch = np.array([\n",
-    "  # t = 0      t = 1\n",
-    "  [[0, 1, 2], [9, 8, 7]], # instance 0\n",
-    "  [[3, 4, 5], [5, 1, 9]], # instance 1\n",
-    "  [[6, 7, 8], [6, 5, 4]], # instance 2\n",
-    "  [[9, 0, 1], [3, 2, 1]], # instance 3 \n",
-    "])\n",
-    "\n",
-    "print('X batch shape:', X_batch.shape)\n",
-    "\n",
-    "seq_length_batch = np.array([2, 1, 2, 2])\n",
-    "\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    outputs_val, states_val = sess.run([outputs, final_states],\n",
-    "                                      feed_dict={X:X_batch, seq_length:seq_length_batch})\n",
-    "    \n",
-    "    print('outputs with shape: ', outputs_val.shape) \n",
-    "    print(outputs_val)\n",
-    "    print('----------------------')\n",
-    "    print('states with shape: ', states_val.shape) \n",
-    "    print(states_val)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**From code above, we know that:**\n",
-    "* input X batch shape: (batch_size, num_steps, input_dim) => (4, 2, 3)\n",
-    "* outputs with shape:  (batch_size, num_steps, cell.output_size) => (4, 2, 5)\n",
-    "* states with shape:  (batch_size, cell.state_size) => (4, 5)\n",
-    "\n",
-    "**More specifically, we observe that tf.nn.dynamic_rnn returns:**\n",
-    "* `outputs` contains information about every time step. In this particular example:\n",
-    "    * 2 steps\n",
-    "    * a batch of four examples, each has 5 dimensions.\n",
-    "\n",
-    "* `state` contains the state from last time step\n",
-    "    * final state only involves one time step (i.e., the last one)\n",
-    "    * a batch of four states, each for an example. \n",
-    "\n",
-    "**Moreover:**\n",
-    "* `cell.state_size` is determined by num_units\n",
-    "* `cell.output_size` is determined by num_units of the last RNN cell (last layer)\n",
-    "    * In this particular example, there is only one cell (i.e., one layer), therefore cell.output_size == cell.state_size, which is 5.\n",
-    "\n",
-    "**sequence_length of tf.nn.dynamic_rnn**\n",
-    "\n",
-    "`sequence_length`: (optional) An int32/int64 vector sized [batch_size]. Used to copy-through state and zero-out outputs when past a batch element's sequence length. So it's more for correctness than performance.\n",
-    "\n",
-    "In the above code, we define:\n",
-    "```python\n",
-    "seq_length_batch = np.array([2, 1, 2, 2])\n",
-    "```\n",
-    "which means that the `tf.nn.dynamic_rnn` only handles:\n",
-    "* the first two time steps for the first example of the batch,  \n",
-    "* the first time step for the second example\n",
-    "* the first two time steps for the third example \n",
-    "* the first two time steps for the fourth example \n",
-    "\n",
-    "> Therefore, we can see that values for the second time step of the second example are zeros in the `outputs`. More importantly, since the first time step of the second example is the last time step that has been handled, the final state for the second example contains the state from the first time step rather than the second time step\n",
-    "\n",
-    "the state is a convenient tensor that holds the last actual RNN state, ignoring the zeros. The output tensor holds the outputs of all cells, so it doesn't ignore the zeros. That's the reason for returning both of them."
+    "    * Generally, the `cell.output_size` is the `lstm_units` of the cell in the last layer of LSTM network if the network has multiple LSTM layers. \n",
+    "    * For RNN with only one layer, `cell.output_size` is defined by the `lstm_units` of the RNN cell."
    ]
   },
   {
@@ -622,13 +492,18 @@
     "\n",
     "# [0, 1, 2, 3, 4 ,...]\n",
     "x = tf.range(1, 10, name=\"x\")\n",
-    "batch_size = 3\n",
-    "# A queue that outputs 0,1,2,3,...\n",
+    "\n",
+    "\n",
+    "\n",
+    "# batch_size = 3\n",
+    "# # A queue that outputs 0,1,2,3,...\n",
     "range_q = tf.train.range_input_producer(limit=5, shuffle=False)\n",
     "slice_end = range_q.dequeue()\n",
     " \n",
-    "# Slice x to variable length, i.e. [0], [0, 1], [0, 1, 2], ....\n",
+    "# # Slice x to variable length, i.e. [0], [0, 1], [0, 1, 2], ....\n",
     "y = tf.slice(x, [0], [slice_end], name=\"y\")\n",
+    "\n",
+    "\n",
     "\n",
     "# Batch the variable length tensor with dynamic padding\n",
     "# batched_data = tf.train.batch(\n",
@@ -659,6 +534,69 @@
     "# Print the result\n",
     "# print(\"Batch shape: {}\".format(res[0][\"y\"].shape))\n",
     "# print(res[0][\"y\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Argument must be a dense tensor: [[1], [0, 1], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2]] - got shape [9], but wanted [9, 1].",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-42a105905d24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m                                        \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m                                        \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m                                        [0, 1, 2]])\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;31m#     b = tf.convert_to_tensor(np.arange(N_EXAMPLES))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36mconvert_to_tensor\u001b[0;34m(value, dtype, name, preferred_dtype)\u001b[0m\n\u001b[1;32m    609\u001b[0m       \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    610\u001b[0m       \u001b[0mpreferred_dtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpreferred_dtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 611\u001b[0;31m       as_ref=False)\n\u001b[0m\u001b[1;32m    612\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    613\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36minternal_convert_to_tensor\u001b[0;34m(value, dtype, name, as_ref, preferred_dtype)\u001b[0m\n\u001b[1;32m    674\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    675\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mret\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 676\u001b[0;31m           \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconversion_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mas_ref\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mas_ref\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    678\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mret\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/tensorflow/python/framework/constant_op.py\u001b[0m in \u001b[0;36m_constant_tensor_conversion_function\u001b[0;34m(v, dtype, name, as_ref)\u001b[0m\n\u001b[1;32m    119\u001b[0m                                          as_ref=False):\n\u001b[1;32m    120\u001b[0m   \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mas_ref\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 121\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mconstant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/tensorflow/python/framework/constant_op.py\u001b[0m in \u001b[0;36mconstant\u001b[0;34m(value, dtype, shape, name, verify_shape)\u001b[0m\n\u001b[1;32m    100\u001b[0m   \u001b[0mtensor_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattr_value_pb2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAttrValue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m   tensor_value.tensor.CopyFrom(\n\u001b[0;32m--> 102\u001b[0;31m       tensor_util.make_tensor_proto(value, dtype=dtype, shape=shape, verify_shape=verify_shape))\n\u001b[0m\u001b[1;32m    103\u001b[0m   \u001b[0mdtype_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mattr_value_pb2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAttrValue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtensor_value\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m   const_tensor = g.create_op(\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/tensorflow/python/framework/tensor_util.py\u001b[0m in \u001b[0;36mmake_tensor_proto\u001b[0;34m(values, dtype, shape, verify_shape)\u001b[0m\n\u001b[1;32m    383\u001b[0m                          \"\"\" - got shape %s, but wanted %s.\"\"\" % (\n\u001b[1;32m    384\u001b[0m                              \u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnparray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 385\u001b[0;31m                              _GetDenseDimensions(values)))\n\u001b[0m\u001b[1;32m    386\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    387\u001b[0m     \u001b[0;31m# python/numpy default float type is float64. We prefer float32 instead.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Argument must be a dense tensor: [[1], [0, 1], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2], [0, 1, 2]] - got shape [9], but wanted [9, 1]."
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "N_EXAMPLES = 100\n",
+    "BATCH_SIZE = 4\n",
+    "N_EPOCHS = 3\n",
+    "tf.reset_default_graph()\n",
+    "\n",
+    "\n",
+    "steps_per_epoch = N_EXAMPLES / BATCH_SIZE\n",
+    "\n",
+    "# with tf.Graph().as_default():\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "#     a = tf.convert_to_tensor(np.arange(N_EXAMPLES))\n",
+    "    a = tf.convert_to_tensor([[1], \n",
+    "                                       [0, 1], \n",
+    "                                       [0, 1, 2],\n",
+    "                                       [0, 1, 2],\n",
+    "                                       [0, 1, 2],\n",
+    "                                       [0, 1, 2],\n",
+    "                                       [0, 1, 2],\n",
+    "                                       [0, 1, 2],\n",
+    "                                       [0, 1, 2]])\n",
+    "#     b = tf.convert_to_tensor(np.arange(N_EXAMPLES))\n",
+    "\n",
+    "    aa = tf.train.slice_input_producer([a], shuffle=True, seed=1, num_epochs=N_EPOCHS)\n",
+    "    batch = tf.train.batch([aa], batch_size=BATCH_SIZE, dynamic_pad=True)\n",
+    "\n",
+    "#     s = tf.Session()\n",
+    "\n",
+    "#     sess.run(init_op)\n",
+    "    \n",
+    "    aa_, batch_ = sess.run([aa, batch])\n",
+    "    \n",
+    "    print(aa_)\n",
+    "    print(batch_)"
    ]
   },
   {
